# PyPoly

./: LICENSE  README.md  main.py  pyproject.toml
benchmarks/: bench_analysis.py
docs/: Makefile  api.rst  conf.py  index.rst
docs/notebooks/: usage_demo.ipynb
notebooks/: 01_prototype_filter_and_channel_mapping.ipynb  02_analysis_synthesis_reconstruction.ipynb  03_oversampled_channelizer.ipynb  usage_demo.ipynb
src/pypoly/: __init__.py  benchmark.py  channelizer.py
tests/: test_channelizer.py
