[project]
name = "pypoly"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ipympl>=0.10.0",
    "matplotlib>=3.11.0",
]
docs = [
    "furo>=2025.12.19",
    "myst-nb>=1.4.0",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.12.0",
]
bench = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
